force-app/main/default/objects/Approval_Interface_Configuration__c/Approval_Interface_Configuration__c.object-meta.xml
<CustomObject>
    <label>Approval Interface Configuration</label>
    <nameField>
        <label>Approval Interface Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Interface Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>