force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Approve_Reject_By_Status__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_By_Status__c</fullName>
    <label>Approve/Reject By Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>