force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Approve_Reject_Visibility_Access__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_Visibility_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approve/Reject Visibility Access</label>
    <type>Checkbox</type>
</CustomField>