force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Approved_SOQL_Statement__c.field-meta.xml
<CustomField>
    <fullName>Approved_SOQL_Statement__c</fullName>
    <label>Approved - SOQL Statement</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>