force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Child_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Child_Level_1__c</fullName>
    <label>Child Level 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>