force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Default_Selected_Statge__c.field-meta.xml
<CustomField>
    <fullName>Default_Selected_Statge__c</fullName>
    <label>Default Selected Statge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending At Hight Authority</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Failed In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>