force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Failed_In_Process_Header_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Failed_In_Process_Header_Column_Name__c</fullName>
    <label>Failed In Process - Header Column Name</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>