force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Failed_In_Process_Line_Item_Column_Nam__c.field-meta.xml
<CustomField>
    <fullName>Failed_In_Process_Line_Item_Column_Nam__c</fullName>
    <label>Failed In Process - Line Item Column Nam</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>