force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Failed_In_Process_SOQL_Statement__c.field-meta.xml
<CustomField>
    <fullName>Failed_In_Process_SOQL_Statement__c</fullName>
    <label>Failed In Process - SOQL Statement</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>