force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Filter_criteria_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Filter_criteria_Cancelled__c</fullName>
    <label>Filter criteria - Cancelled</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>