force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Filter_criteria_Failed_At_Process__c.field-meta.xml
<CustomField>
    <fullName>Filter_criteria_Failed_At_Process__c</fullName>
    <label>Filter criteria - Failed At Process</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>