force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Filter_criteria_Pending_At_Higher_Auth__c.field-meta.xml
<CustomField>
    <fullName>Filter_criteria_Pending_At_Higher_Auth__c</fullName>
    <label>Filter criteria - Pending At Higher Auth</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>