force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Open_SOQL_Statement__c.field-meta.xml
<CustomField>
    <fullName>Open_SOQL_Statement__c</fullName>
    <label>Open - SOQL Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>