force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Pending_At_Higher_Authority_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Pending_At_Higher_Authority_Line_Item__c</fullName>
    <label>Pending At Higher Authority - Line Item</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>