force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Pending_Header_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Pending_Header_Column_Name__c</fullName>
    <label>Pending - Header Column Name</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>