force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Profile_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_API_Name__c</fullName>
    <label>Profile API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>