force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Rejected_Line_Item_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Line_Item_Column_Name__c</fullName>
    <label>Rejected - Line Item Column Name</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>