force-app/main/default/objects/Approval_Interface_Configuration__c/fields/Search_by_Filter_Visibility_Access__c.field-meta.xml
<CustomField>
    <fullName>Search_by_Filter_Visibility_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search by Filter Visibility Access</label>
    <type>Checkbox</type>
</CustomField>