force-app/main/default/objects/Approval_Interface_Configuration__c/fields/sObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_API_Name__c</fullName>
    <label>sObject API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>