force-app/main/default/objects/Approval_Interface_Configuration__c/fields/UGDN_Number__c.field-meta.xml
<CustomField>
    <fullName>UGDN_Number__c</fullName>
    <label>UGDN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>